# conclave

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
blog/: 00-i-have-built-a-small-deterministic-cathedral.md  01-the-problem-with-agentic-code.md  02-any-language-same-trace.md  03-creativity-needs-a-cage.md  04-from-intent-to-artifact.md  05-agent-writes-a-capability.md  06-v0.1-is-done.md  07-multiagents-now-and-in-the-future.md  08-v0.2-expanded-dsl.md  09-v0.2-is-running.md  10-conclave-in-conclave.md
crates/conclave-cap-fetch/: Cargo.toml
crates/conclave-cap-fetch/src/: main.rs
crates/conclave-cap-fetch/tests/: fetch_cap.rs
crates/conclave-cli/: Cargo.toml
crates/conclave-cli/src/: main.rs
crates/conclave-cli/src/cmd/: inspect.rs  install_cap.rs  lower.rs  mod.rs  module.rs  pack.rs  plan.rs  run.rs  seal.rs
crates/conclave-hash/: Cargo.toml
crates/conclave-hash/src/: canonical.rs  digest.rs  lib.rs  stable_id.rs
crates/conclave-hash/tests/: canonical_json.rs  sha256.rs  stable_id.rs
crates/conclave-ir/: Cargo.toml
crates/conclave-ir/src/: canonical.rs  constraint.rs  edge.rs  error.rs  goal.rs  lib.rs  node.rs  subgraph.rs  types.rs
crates/conclave-ir/tests/: hashing.rs  validation.rs
crates/conclave-lang/: Cargo.toml
crates/conclave-lang/src/: ast.rs  error.rs  lexer.rs  lib.rs  lower.rs  module_cache.rs  normalize.rs  parser.rs
crates/conclave-lang/tests/: hashing.rs  lexer.rs  lower.rs  normalize.rs  parse.rs
crates/conclave-manifest/: Cargo.toml
crates/conclave-manifest/src/: canonical.rs  error.rs  lib.rs  seal_rules.rs  types.rs
crates/conclave-manifest/tests/: hashing.rs  seal_rules.rs
crates/conclave-pack/: Cargo.toml
crates/conclave-pack/src/: artifact.rs  bundle.rs  error.rs  lib.rs
crates/conclave-pack/tests/: roundtrip.rs
crates/conclave-runtime/: Cargo.toml
crates/conclave-runtime/src/: cap_dispatcher.rs  clock.rs  dispatch.rs  error.rs  lib.rs  rate_limiter.rs  scheduler.rs  trace.rs
crates/conclave-runtime/tests/: conformance.rs
crates/conclave-seal/: Cargo.toml
crates/conclave-seal/src/: lib.rs  verify.rs
crates/conclave-seal/tests/: seal.rs  verify.rs
crates/conclave-store/: Cargo.toml
crates/conclave-store/src/: chained.rs  embedded.rs  error.rs  fs_store.rs  lib.rs
crates/conclave-store/tests/: store.rs
docs/: AGENT_GUIDE.md  DSL_IMPLEMENTATION_PLAN.md  EVOLUTION_PLAN.md  TESTING.md  V0.2_PLAN.md  artifact_format_v0.1.md  hello_world.md  manifest_spec.md  plan_ir.md  runtime_execution_model.md  rust_architecture_plan.md  source_language_v0.1.md
examples/: canonical.json  cap_conclave_lower.py  cap_fetch.py  cap_word_count.py  manifest_template.json  package.conclave  package_manifest.json  package_manifest_template.json  package_plan.json  package_trace.json  plan_ir.json  sealed_manifest.json  summarize_urls.cnclv  trace.json  trace_py.json
tests/conformance/: v0.1.md
