[workspace]
resolver = "2"
members = [
    "crates/conclave-hash",
    "crates/conclave-ir",
    "crates/conclave-manifest",
    "crates/conclave-seal",
    "crates/conclave-store",
    "crates/conclave-runtime",
    "crates/conclave-pack",
    "crates/conclave-cli",
]
# Workspace listing matches README.md ordering.
# Development/implementation order (CLAUDE.md §4): hash → ir → manifest → store → pack → runtime → cli

[workspace.dependencies]
serde            = { version = "1.0.219", features = ["derive"] }
serde_json       = { version = "1.0.140" }
sha2             = { version = "0.10.8" }
hex              = { version = "0.4.3" }
base64           = { version = "0.22.1" }
thiserror        = { version = "2.0.12" }
clap             = { version = "4.5.37", features = ["derive"] }
anyhow           = { version = "1.0" }
ed25519-dalek    = { version = "2", features = ["std"] }
signature        = { version = "2" }
dirs-next        = { version = "2" }
