[package]
name    = "conclave-cap-fetch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "conclave-cap-fetch"
path = "src/main.rs"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
base64      = { workspace = true }
ureq        = { version = "2", features = ["native-certs"] }

[dev-dependencies]
base64      = { workspace = true }
tiny_http   = "0.12"
