[package]
name    = "conclave-pack"
version = "0.1.0"
edition = "2021"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
base64     = { workspace = true }
thiserror  = { workspace = true }
conclave-hash     = { path = "../conclave-hash" }
conclave-ir       = { path = "../conclave-ir" }
conclave-manifest = { path = "../conclave-manifest" }
