[package]
name    = "conclave-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
base64            = { workspace = true }
conclave-hash     = { path = "../conclave-hash" }
conclave-ir       = { path = "../conclave-ir" }
conclave-manifest = { path = "../conclave-manifest" }
conclave-store    = { path = "../conclave-store" }
