[package]
name    = "conclave-seal"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { workspace = true }
thiserror  = { workspace = true }
conclave-hash     = { path = "../conclave-hash" }
conclave-ir       = { path = "../conclave-ir" }
conclave-manifest = { path = "../conclave-manifest" }
